# Concept

./: .gitignore  .gitmodules  README.md
Concept/: CMakeLists.txt  main.qml
Concept/content/: Screen01.ui.qml
Concept/imports/: pomodoro.h
Concept/includes/: #include <QtTest>.cpp  Graph.h  StatsWindow.h  codeRun.h  cppColors.h  editor.h  setFocusPeriod.h  startTimer.h  studytimer.h  timerUI.h
Concept/qml/: About.qml  CEditor.qml  CMenuBar.qml  CSidebar.qml  FileSystemView.qml  Pomodoro.qml
Concept/src/: Graph.cpp  StatsWindow.cpp  ToolBox.cpp  calc.cpp  codeRun.cpp  editor.cpp  fileitem.cpp  fileitem.h  main.cpp  mainhelp.cpp  newlist.cpp  newlist.h  setFocusPeriod.cpp  startTimer.cpp  studytimer.cpp  texteditor.cpp  texteditor.hpp  timer.cpp  timerUI.cpp  timernew.cpp  timernew.h  timertrials  timertrials.cpp
Concept/src/timernew.dSYM/Contents/: Info.plist
Concept/src/timernew.dSYM/Contents/Resources/DWARF/: timernew
Concept/src/timertrials.dSYM/Contents/: Info.plist
Concept/src/timertrials.dSYM/Contents/Resources/DWARF/: timertrials
Reporting/: Klaara_weekly_reports.md  Marta_Trales_Reports.md  Maxime Weekly Update.md  Milana_Komisarova_weekly_report.md  NguyenVuWeeklyUpdate.md  bruno-weekly-update.md
Texteditor/QT_te/: CMakeLists.txt  texteditor.cpp
testqt/: CMakeLists.txt  CMenu.h  CSideBar.cpp  CSideBar.h  Colors.h  DateCell.cpp  DateCell.hpp  main.cpp  mainhelp.cpp  mainhelp.h  mainwindow.cpp  mainwindow.h  texteditor.cpp  texteditor.hpp  timer.cpp  timer.h
testqt/.qt/: QtDeploySupport.cmake
